--- a/MLProject.ipynb
+++ b/MLProject.ipynb
@@ -2746,20 +2746,20 @@
         "log_reg = LogisticRegression()\n",
         "log_reg.fit(X_train, y_train)\n",
         "\n",
-        "# # Predict on the test set\n",
-        "# y_pred = log_reg.predict(X_test)\n",
+        "# Predict on the test set\n",
+        "y_pred = log_reg.predict(X_test)\n",
         "\n",
-        "# # Calculate accuracy\n",
-        "# accuracy = accuracy_score(y_test, y_pred)\n",
-        "# print(f'Accuracy: {accuracy:.2f}')\n",
+        "# Calculate accuracy\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "print(f'Accuracy: {accuracy:.2f}')\n",
         "\n",
-        "# # Print confusion matrix\n",
-        "# print('Confusion Matrix:')\n",
-        "# print(confusion_matrix(y_test, y_pred))\n",
+        "# Print confusion matrix\n",
+        "print('Confusion Matrix:')\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
         "\n",
-        "# # Print classification report\n",
-        "# print('Classification Report:')\n",
-        "# print(classification_report(y_test, y_pred))\n",
+        "# Print classification report\n",
+        "print('Classification Report:')\n",
+        "print(classification_report(y_test, y_pred))\n",
         "\n"
       ],
       "metadata": {
